--- a/carrusCSS/confirmation.css
+++ b/carrusCSS/confirmation.css
@@ -6,11 +6,12 @@ body {
   }
   
   .confirmation-container {
-    background: linear-gradient(to right, #002244 0%, #041E42 50%, #5D8AA8 100%);
+    background: linear-gradient(to right, #002244 0%, #30445f 50%, #5D8AA8 100%);
     padding: 30px;
     margin: auto;
     max-width: 500px;
     border-radius: 10px;
+    color: white;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
   }
   
